[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Lever.gd" type="Script" id=1]
[ext_resource path="res://GFX/Lever/up.png" type="Texture" id=2]
[ext_resource path="res://GFX/Tutorial/buttonZ.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.7724, 15.0257 )

[node name="Lever" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.714657 )
shape = SubResource( 1 )

[node name="buttonZ" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -0.541107, -35.484 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Lever_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lever_body_exited"]
